# gh_actions_playground

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  compose.yaml  pyproject.toml  useful_links.txt
.github/workflows/: azure.yml  ci_workflow.yml  codeql.yml
app/: app.py
docs/: index.md
src/: __init__.py
src/modules/: business_rules.py
src/templates/: 404.html  index.html
tests/: conftest.py  test_app.py
tests/integration/: test_routes.py
tests/unit/: test_business_rules.py
utils/: test_appsights.ps
workflows/: workflow.yml
