# https://docs.pytest.org/en/7.1.x/reference/customize.html
[project]
name="gh_actions_playground"

[tool.flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .pytest_cache

[tool.black]
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib","-ra -q"
]
minversion = "6.0"
testpaths = [
    "tests",
    "integration",
]
